assets/scss/_footer.scss
@use 'uswds-core' as *;

.footer {
  @include u-padding(0);
  background-color: color('primary-lightest');
}

.usa-identifier p {
  @include u-margin(0);
}

.usa-identifier__container {
  @include u-padding(0);
}

.footer-navigation {
  @include u-padding-top(3);
  @include u-padding-bottom(3);

  ul {
    @include unstyled-list;
  }

  a {
    color: color('primary-dark');
  }
}

.footer-navigation__section {
  display: flex;
  justify-content: end;
}

.system-status {
  @include u-padding-top(2);

  &::before {
    content: '';
    width: 1.75rem;
    height: 1.75rem;
    display: inline-block;
    vertical-align: middle;
    margin-right: 0.25rem;
    background: url(../img/icon-system-status.svg) left center no-repeat;
  }
}

